<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt_enter_label"
        android:textColor="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/enter_label"
        android:background="@android:color/transparent"
        />

    <EditText
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/enter_box"
        android:background="@android:color/transparent"
        />

    <View
        android:layout_width="367dp"
        android:layout_centerHorizontal="true"
        android:layout_height="2dp"
        android:layout_alignBottom="@id/enter_box"
        android:background="@color/light_blue"
        android:id="@+id/line"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift_equals"
        android:textColor="@color/black"
        android:layout_alignTop="@id/encrypt_button"
        android:layout_marginTop="-300dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/shift_equals"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt_answer"
        android:textColor="@color/black"
        android:layout_alignTop="@id/encrypt_button"
        android:layout_marginTop="-150dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/shifted"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/encrypt_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:id="@+id/encrypt_button"
        >
    </Button>

    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/finish_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/encrypt_button"
        android:layout_marginTop="25dp"
        android:id="@+id/back_button"
        >
    </Button>


</RelativeLayout>