<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_label"
        android:textColor="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/enter_label"
        android:background="@android:color/transparent"
         />

    <EditText
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/enter_box"
        android:background="@android:color/transparent"
        />

    <View
        android:layout_width="367dp"
        android:layout_centerHorizontal="true"
        android:layout_height="2dp"
        android:layout_alignBottom="@id/enter_box"
        android:background="@color/light_blue"
        android:id="@+id/line"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignTop="@id/line"
        android:layout_alignBottom="@id/button"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="150dp"
        android:text="@string/bad_input"
        android:gravity="center"
        android:visibility="invisible"
        android:id="@+id/bad_input_msg"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/button_label"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/button"
        >

    </Button>

</RelativeLayout>